# streamz

./: .bazel_fix_commands.json  .eslintrc.js  .gitignore  .prettierrc  .stylelintrc.json  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.client.json  tsconfig.json  tsconfig.lint.json  tsconfig.server.json
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  world
.devcontainer/portage/: make.conf  repos.conf
.devcontainer/portage/package.use/: nodejs
.husky/: pre-commit
src/: BUILD.bazel  test.ts  tsconfig.lint.json
src/frontend/: BUILD.bazel
src/frontend/client/: BUILD.bazel  index.prod.html  main.dev.ts  main.html  main.prod.ts  main.scss  main.theme.scss  main.ts  manifest.webmanifest  tsconfig.json
src/frontend/client/app/: BUILD.bazel  app-base.module.ts  app-dev.module.ts  app-prod.module.ts  app-routing.module.ts  app-server.module.ts  app.component.ng.html  app.component.scss  app.component.theme.scss  app.component.ts  app.module.ts
src/frontend/client/assets/: BUILD.bazel
src/frontend/client/core/: BUILD.bazel  core.module.ts  core.theme.scss
src/frontend/client/core/components/: BUILD.bazel  components.module.ts  components.theme.scss
src/frontend/client/core/components/header/: BUILD.bazel  header.component.ng.html  header.component.theme.scss  header.component.ts  header.module.ts
src/frontend/client/core/components/sidebar/: BUILD.bazel  index.ts  sidebar.component.ng.html  sidebar.component.scss  sidebar.component.theme.scss  sidebar.component.ts  sidebar.module.ts
src/frontend/client/environment/: BUILD.bazel  index.ts
src/frontend/client/features/about/: BUILD.bazel  about.component.ng.html  about.component.scss  about.component.ts  about.module.ts
src/frontend/client/features/home/: BUILD.bazel  home.component.ng.html  home.component.scss  home.component.ts  home.module.ts
tools/: BUILD.bazel  html_assets.bzl  ng_ts_library.bzl  rxjs_shims.js
