load("//tools:ng_ts_library.bzl", "ng_ts_library")
load("//tools:html_assets.bzl", "html_assets")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package_group(
    name = "internal",
    packages = [
        "//src/frontend/client/...",
    ],
)

package(default_visibility = [":internal"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig-client"],
)

ng_ts_library(
    name = "client_dev",
    srcs = ["main.dev.ts"],
    tsconfig = ":tsconfig",
    deps = [
        "//src/frontend/client/app:dev",
        "@npm//@angular/platform-browser",
    ],
)

ng_ts_library(
    name = "client_prod",
    srcs = ["main.prod.ts"],
    tsconfig = ":tsconfig",
    deps = [
        "//src/frontend/client/app:prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
    ],
)

sass_binary(
    name = "styles",
    src = "main.scss",
    deps = [":theme"],
)

sass_library(
    name = "angular_material_theming",
    srcs = [
        "@npm//:node_modules/@angular/material/_theming.scss",
    ],
)

sass_library(
    name = "theme",
    srcs = ["main.theme.scss"],
    deps = [
        ":angular_material_theming",
        "//src/frontend/client/app:theme",
    ],
)

html_assets(
    name = "html_dev",
    asset_paths = [
        "/_/ts_scripts.js",
    ],
    html_file = ":main.html",
    manifest = ":manifest.webmanifest",
    scripts = [
        "@npm//:node_modules/zone.js/dist/zone.min.js",
    ],
    stylesheets = [
        ":main.css",
    ],
)

concatjs_devserver(
    name = "dev_server",
    additional_root_paths = ["src/frontend/client/html_dev"],
    entry_module = "streamz/src/frontend/client/main.dev",
    port = 4200,
    scripts = [
        "@npm//:node_modules/tslib/tslib.js",
        "//tools:rxjs_umd_modules",
    ],
    static_files = [
        "@npm//:node_modules/zone.js/dist/zone.min.js",
        "//src/frontend/client/assets",
        ":html_dev",
        ":main.css",
        ":favicon.ico",
        ":manifest.webmanifest",
    ],
    deps = [":client_dev"],
)
