load("//tools:ng_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["app.server.module.ts"],
    ),
    #angular_assets = ["app.component.html"],
    tsconfig = "//:tsconfig.client.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
