load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")
load("//tools:ng_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
        "app-routing.module.ts",
    ],
    angular_assets = [
        ":styles",
        ":app.component.ng.html",
    ],
    tsconfig = "//src/frontend/client:tsconfig",
    deps = [
        "//src/frontend/client/core",
        "//src/frontend/client/environment",
        "//src/frontend/client/features/about",
        "//src/frontend/client/features/home",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//src/frontend/client:tsconfig",
    deps = [
        ":base",
        "//src/frontend/client/environment",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//src/frontend/client:tsconfig",
    deps = [
        ":base",
        "//src/frontend/client/environment",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "server",
    srcs = ["app-server.module.ts"],
    tsconfig = "//src/frontend/client:tsconfig",
    deps = [
        ":base",
        ":prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)

sass_binary(
    name = "styles",
    src = "app.component.scss",
)

sass_library(
    name = "theme",
    srcs = ["app.component.theme.scss"],
    deps = [
        "//src/frontend/client/core:theme",
    ],
)
