load("//tools:ng_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "core",
    srcs = [
        "core.module.ts",
        "index.ts",
    ],
    tsconfig = "//src/frontend/client:tsconfig.json",
    deps = [
        "//src/frontend/client/core/components",
        "@npm//@angular/core",
        "@npm//@angular/material",
    ],
)

sass_library(
    name = "theme",
    srcs = [
        "core.theme.scss",
    ],
    deps = [
        "//src/frontend/client/core/components:theme",
    ],
)
