load("//tools:ng_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "header",
    srcs = [
        "header.component.ts",
        "header.module.ts",
        "index.ts",
    ],
    angular_assets = [
        ":styles",
        ":header.component.ng.html",
    ],
    tsconfig = "//src/frontend/client:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
    ],
)

sass_binary(
    name = "styles",
    src = "header.component.scss",
)

sass_library(
    name = "theme",
    srcs = ["header.component.theme.scss"],
)
