load("//tools:ng_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//src/frontend/client:internal"])

ng_ts_library(
    name = "sidebar",
    srcs = [
        "index.ts",
        "sidebar.component.ts",
        "sidebar.module.ts",
    ],
    angular_assets = [
        ":styles",
        ":sidebar.component.ng.html",
    ],
    tsconfig = "//src/frontend/client:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/router",
    ],
)

sass_binary(
    name = "styles",
    src = "sidebar.component.scss",
)

sass_library(
    name = "theme",
    srcs = ["sidebar.component.theme.scss"],
)
